# florent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PIPELINE_IMPLEMENTATION.md  README.md  RISK_PROPAGATION_IMPLEMENTATION.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.sh  test_api.sh  update.sh  visualize_analysis.py
Classes/: .MATLABDriveTag
Functions/: .MATLABDriveTag
MATLAB/: QUICK_START.md  README_FUNCTIONS.md  SETUP.md  initializeFlorent.m  main.m  main.mlx
Scripts/: .MATLABDriveTag
docker/: docker-compose-api.yaml  docker-compose-model.yaml
docs/: API.md  CHANGELOG.md  CONFIGURATION.md  DATACLASS_AND_PARAMS_AUDIT.md  ENHANCED_OUTPUT.md  ENV_LOADING.md  IMPLEMENTATION_PLAN.md  INDEX.md  LOGGING.md  MATLAB_ENHANCED_SCHEMAS_ANALYSIS.md  MATLAB_PYTHON_CONNECTION_ANALYSIS.md  REFACTOR_COMPLETE.md  REFACTOR_PROGRESS.md  REFACTOR_SUMMARY.md  ROADMAP.md  SETUP.md  SYSTEM_OVERVIEW.md  audit.md  openapi.json
examples/: risk_propagation_demo.py
integration_tests/: test_api_endpoint.py  test_e2e_analysis.py  test_integration_script.py  validate_data.py
output/: analysis.json
scripts/: export_dataclass_schemas.py  export_openapi_schemas.py  extract_affiliations.py  generate_openapi.py  generate_projects.py  serve_openapi_docs.py  test_api_endpoint.py  test_integration.py  validate_data.py  visualize_analysis.py
src/: config.py  main.py  settings.py
tests/: README.md  TESTING_GUIDE.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_ai_client.py  test_api.py  test_base.py  test_chains.py  test_config_schemas.py  (+17 more)
(+196 files in other folders)
