[project]
name = "florent"
version = "0.1.0"
requires-python = ">=3.13"
description = "Business graph modeling and traversal"
dependencies = [
    "pydantic>=2.0.0",
    "dspy-ai>=2.0.0",
    "structlog>=25.5.0",
    "dotenv>=0.9.9",
    "litestar>=2.0.0",
    "rich>=14.3.2",
    "uvicorn>=0.40.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
]
